# remote-xinput-controller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: audio.cpp  audio.hpp  client.cpp  client.hpp  host.cpp  host.hpp  incl.hpp  main.cpp  mem.cpp  mem.hpp  server.cpp  server.hpp  types.hpp  wx_impl.cpp  wx_impl.hpp
